# vgd_counterfactuals

./: .gitignore  404.html  DEVELOP.rst  HISTORY.rst  README.rst  index.html  pyproject.toml
docs/: mkdocs.yml
docs/docs/: get_started_core.md  get_started_example.md  get_started_example.py  index.md  installation.md  tutorials.md  tutorials_megan.md  tutorials_megan.py
get_started_core/: index.html
get_started_example/: index.html
installation/: index.html
search/: search_index.json
tests/: test_base.py  test_generate_colors.py  test_generate_molecules.py  test_util.py  test_visualization.py  util.py
tests/artifacts/: README.rst
tutorials/: index.html
tutorials_megan/: index.html
vgd_counterfactuals/: __init__.py  base.py  cli.py  testing.py  utils.py  visualization.py
vgd_counterfactuals/examples/: 00_quickstart.py  01_visualization.py  README.rst
vgd_counterfactuals/experiments/: README.rst
vgd_counterfactuals/experiments/results/: README.rst
vgd_counterfactuals/generate/: colors.py  molecules.py  smiles_one_step_changes.py
