[build-system]
requires = ["poetry-core>=1.2.0b2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vgd_counterfactuals"
version = "0.3.7"
description = "Counterfactual explanations for GNNs based on the visual graph dataset format"
license = "MIT license"
authors = ["Jonas Teufel <jonseb1998@gmail.com>"]
maintainers = ["Jonas Teufel <jonseb1998@gmail.com>"]
# readme = "README.rst"
keywords = ["graph neural networks", "counterfactuals", "explainable AI"]
packages = [
    { include = "vgd_counterfactuals" },
    { include = "vgd_counterfactuals/experiments"},
]
include = [
    "vgd_counterfactuals/VERSION",
    "banner.png",
]
exclude = [
    "venv",
    "dist",
]

[tool.poetry.scripts]
vgd_counterfactuals = 'vgd_counterfactuals.cli:cli'

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
click = ">=7.1.2"
jinja2 = ">=3.0.3"
matplotlib = ">=3.5.3"
numpy = ">=1.23.2"
python-decouple = ">=3.6"
poetry-bumpversion = ">=0.3.0"
rdkit = ">=2022.9.5"
pycomex = ">=0.9.2"
visual_graph_datasets = ">=0.13.4"
dimorphite-dl = ">=1.3.2"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.3"
poetry-bumpversion = ">=0.3.0"

[tool.poetry_bumpversion.file."vgd_counterfactuals/VERSION"]
search = "{current_version}"
replace = "{new_version}"

[tool.poetry_bumpversion.file."README.rst"]
search = 'version-{current_version}-orange.svg'
replace = 'version-{new_version}-orange.svg'

[tool.poetry_bumpversion.file."vgd_counterfactuals/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'