[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vgd_counterfactuals"
version = "0.3.11"
description = "Counterfactual explanations for GNNs based on the visual graph dataset format"
# readme = "README.rst"
authors = [
    {name = "Jonas Teufel", email = "jonseb1998@gmail.com"},
]
maintainers = [
    {name = "Jonas Teufel", email = "jonseb1998@gmail.com"},
]
license = { text = "MIT license" }
keywords = [
    "graph neural networks",
    "counterfactuals",
    "explainable AI"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.9,<=3.12"
dependencies = [
    "click>=7.1.2",
    "jinja2>=3.0.3",
    "matplotlib>=3.5.3",
    "numpy>=1.23.2",
    "python-decouple>=3.6",
    "poetry-bumpversion>=0.3.0",
    "rdkit>=2022.9.5",
    "pycomex>=0.9.2",
    "visual_graph_datasets>=0.13.4",
    # "dimorphite-dl>=1.3.2",
    "dimorphite-ojmb>=1.2.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.3",
    "poetry-bumpversion>=0.3.0",
    "mkdocs-material"
]

[project.scripts]
vgd_counterfactuals = "vgd_counterfactuals.cli:cli"

[tool.venv]
exclude = [
    "venv",
    "dist",
    "vgd_counterfactuals/experiments/results",
    "vgd_counterfactuals/examples/results",
]

[tool.hatch.build.targets.wheel]
packages = [
    "vgd_counterfactuals"
]

[tool.bumpversion]
current_version = "0.3.11"
parse = "(?<![=<>])(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = true
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
files = [
    {filename = "pyproject.toml", search="version = \"{current_version}\"", replace="version = \"{new_version}\""},
    {filename = "README.rst"},
    {filename = "vgd_counterfactuals/VERSION"},
    {filename = "vgd_counterfactuals/__init__.py", search="__version__ = \"{current_version}\"", replace="__version__ = \"{new_version}\""},
]